added inits voor vision en knowledge in main

--- a/Pro78Kladblok/Pro78Kladblok.csproj
+++ b/Pro78Kladblok/Pro78Kladblok.csproj
@@ -38,8 +38,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="knowledge\Entry.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="vision\Entry.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
